<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:text="Select option from below and then press connect button"
            android:textColor="@color/circle_background"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_message"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_channel_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/circular_medium"
                android:onClick="onRadioButtonClicked"
                android:textSize="18sp"
                android:text="@string/radio_1" />

            <RadioButton
                android:id="@+id/radio_channel_participant"
                android:layout_width="wrap_content"
                android:fontFamily="@font/circular_medium"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:textSize="18sp"
                android:text="@string/radio_2" />
        </RadioGroup>

        <Button
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGrp"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/green_button_selector"
            android:fontFamily="@font/circular_black"
            android:padding="10dp"
            android:text="@string/connect"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="visible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/second_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_layout"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:text="Please wait....\nfetching session details"
            android:textColor="@color/circle_background"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/press_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_status"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:background="@drawable/green_button_selector"
            android:fontFamily="@font/circular_black"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/button_press"
            android:visibility="gone" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/second_layout">

        <FrameLayout
            android:id="@+id/subscriber_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:id="@+id/publisher_container"
            android:layout_width="@dimen/publisher_width"
            android:layout_height="@dimen/publisher_height"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/publisher_right_margin"
            android:layout_marginRight="@dimen/publisher_end_margin"
            android:layout_marginBottom="@dimen/publisher_bottom_margin"
            android:background="@color/publisher_border_color"
            android:padding="@dimen/publisher_padding" />

    </FrameLayout>

</RelativeLayout>
